--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,412 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
+}
+
+body
+{
+    background: #111;
+}
+section
+{
+    position: relative;
+    padding: 100px;
+}
+.header
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000000;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+.header .logo
+{
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.2em;
+}
+.banner
+{
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.banner:before
+{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 400px;
+    z-index: 1;
+    background: -webkit-linear-gradient(to top, #111, transparent);
+    background: -moz-linear-gradient(to top, #111, transparent);
+    background: -o-linear-gradient(to top, #111, transparent);
+    background: linear-gradient(to top, #111, transparent);
+    display: block;
+    pointer-events: none;
+}
+.banner .content
+{
+    position: relative;
+    max-width: 900px;
+    text-align: center;
+    z-index: 1;
+}
+.banner .content h2
+{
+    color: #fff;
+    font-size: 5em;
+}
+.banner .content p
+{
+    color: #fff;
+    font-size: 1.2em;
+}
+.scroll-down
+{
+    height: 50px;
+    width: 30px;
+    border: 2px solid #fff;
+    position: absolute;
+    left: 50%;
+    bottom: 7%;
+    border-radius: 50px;
+    cursor: pointer;
+}
+.scroll-down:before,.scroll-down:after
+{
+    content: '';
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    border: 2px solid #fff;
+    height: 10px;
+    width: 10px;
+    transform: translate(-50%, -70%) rotate(45deg);
+    border-top: transparent;
+    border-left: transparent;
+    animation: scroll-down 1s ease-in-out infinite;
+}
+.scroll-down:after
+{
+    top: 20%;
+    animation-delay: .3s;
+}
+.fitBg
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.8;
+}
+.fitImg
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.fitImg2
+{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.about
+{
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.about .contentBx
+{
+    min-width: 50%;
+    width: 50%;
+    text-align: end;
+    padding-right: 40px;
+}
+.about .contentBx2
+{
+    min-width: 50%;
+    width: 50%;
+    text-align: start;
+    padding-left: 40px;
+}
+.titleText
+{
+    font-weight: 600;
+    color: #fff;
+    font-size: 2em;
+    margin-bottom: 10px;
+}
+.text
+{
+    color: #fff;
+    font-size: 1em;
+}
+.about .imgBx
+{
+    position: relative;
+    min-width: 50%;
+    width: 50%;
+    min-height: 500px;
+}
+.project
+{
+    text-align: center;
+}
+.project .conetnt
+{
+    text-align: center;
+}
+.project .projectList
+{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+.project .projectList .box
+{
+    position: relative;
+    min-width: 350px;
+    height: 350px;
+    background: #191919;
+    transition: 0.5s;
+    margin: 10px;
+}
+.project .projectList:hover .box
+{
+    opacity: 0.2;
+}
+.project .projectList .box:hover
+{
+    opacity: 1;
+}
+.project .projectList .box .imgBx
+{
+    position: relative;
+    width: 100%;
+    height: 350px;
+}
+.project .projectList .box .content
+{
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.project .projectList .box .content h2
+{
+    color: #fff;
+    font-weight: 500;
+    line-height: 1.2em;
+}
+.project .projectList .box .content h2 span
+{
+    font-size: 0.8em;
+    font-weight: 300;
+    opacity: 0.5;
+}
+
+.main
+{
+    text-align: center;
+}
+.main .mainText
+{
+    text-align: center;
+}
+.main .mainList
+{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+.main .mainList .box
+{
+    position: relative;
+    min-width: 350px;
+    height: 350px;
+    background: #191919;
+    transition: 0.5s;
+    margin: 10px;
+}
+.main .mainList:hover .box
+{
+    opacity: 0.2;
+}
+.main .mainList .box:hover
+{
+    opacity: 1;
+}
+.main .mainList .box .imgBx
+{
+    position: relative;
+    width: 100%;
+    height: 350px;
+}
+.main .mainList .box .content
+{
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.main .mainList .box .content h2
+{
+    color: #fff;
+    font-weight: 500;
+    line-height: 1.2em;
+}
+.main .mainList .box .content h2 span
+{
+    font-size: 0.8em;
+    font-weight: 300;
+    opacity: 0.5;
+}
+.btn
+{
+    position: relative;
+    display: inline-block;
+    background-color: #fff;
+    color: #000;
+    text-decoration: none;
+    margin-top: 30px;
+    padding: 10px 30px;
+}
+.footer
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.footer .sci
+{
+    position: relative;
+    display: flex;
+}
+.footer .sci li
+{
+    list-style: none;
+}
+.footer .sci li a
+{
+    text-decoration: none;
+    margin: 0 20px;
+}
+.footer .sci li a img
+{
+    filter: invert(1);
+    max-width: 40px;
+}
+.copyrightText
+{
+    margin-top: 20px;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 300;
+    color: #666;
+    text-align: center;
+}
+
+@keyframes scroll-down
+{
+    0% {opacity:0;}
+    30% {opacity:1;}
+    60% {opacity:1;}
+    100% {opacity:0; top: 90%;}
+}
+
+@media (max-width: 767px)
+{
+    section
+    {
+        padding: 40px;
+    }
+    .banner .content h2
+    {
+        font-size: 2.5em;
+    }
+    .banner .content p
+    {
+        font-size: 1em;
+    }
+    .about
+    {
+        flex-direction: column;
+    }
+    .about .contentBx, .about .imgBx
+    {
+        min-width: 100%;
+        width: 100%;
+        text-align: center;
+        padding-right: 0px;
+    }
+    .about .contentBx2
+    {
+        min-width: 100%;
+        width: 100%;
+        text-align: center;
+        padding-left: 0px;
+    }
+    .about .imgBx
+    {
+        min-height: 250px;
+    }
+    .btn
+    {
+        margin-bottom: 30px;
+    }
+    .project .projectList .box
+    {
+        position: relative;
+        max-width: 350px;
+        min-width: initial;
+        width: 350px;
+        height: 400px;
+    }
+    .project .projectList .box .imgBx
+    {
+        height: 320px;
+    }
+    .footer .sci li a img
+    {
+        filter: invert(1);
+        max-width: 30px;
+    }
+
+}
