--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,9 @@
 
 <section class="footer">
   <ul class="sci">
-      <li><a href="https://www.linkedin.com/in/david-yuan-5822b9192/"><img src="images/linkedin.png"></a></li>
-      <li><a href="/resume/Resume - David Yuan.pdf"><img src="images/resume.png"></a></li>
+      <li><a href="discord link here"><img src="images/discord.png"></a></li>
+      <li><a href="instagram link here"><img src="images/instagram.png"></a></li>
       <li><a href="mailto: davidy804@gmail.com"><img src="images/email.png"></a></li>
   </ul>
-  <h4 class="copyrightText">Copyright © 2022 David Yuan. All rights reserved.</h4>
+  <h4 class="copyrightText">Copyright © 2023 David Yuan. All rights reserved.</h4>
 </section>
