--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,27 +15,19 @@
     <div class="projectList">
       <div class="box">
           <div class="imgBx">
-              <a href="main"><img src="images/project1.png" class="fitImg"></a>
+              <a href="main"><img src="assets/images/test.png" class="fitImg"></a>
           </div>
           <div class="content">
-              <h2>current<br><span>description</span></h2>
+              <h2>Current Mains<br><span>I am currently using</span></h2>
           </div>
       </div>
         <div class="box">
           <div class="imgBx">
-              <a href="all"><img src="images/project2.png" class="fitImg"></a>
+              <a href="all"><img src="assets/images/test.png" class="fitImg"></a>
           </div>
           <div class="content">
-            <h2>all<br><span>description2</span></h2>
+            <h2>All Gear<br><span>Everything I have used</span></h2>
           </div>
         </div>
-      <div class="box">
-        <div class="imgBx">
-          <a href="#"><img src="images/project3.png" class="fitImg"></a>
-        </div>
-        <div class="content">
-          <h2>potential<br><span>description3</span></h2>
-        </div>
-      </div>
     </div>
 </section>
