--- a/src/styles.css
+++ b/src/styles.css
@@ -193,7 +193,7 @@ section
     font-weight: 600;
     color: #fff;
     font-size: 2em;
-    margin-bottom: 10px;
+    margin-block: 2%;
 }
 .text
 {
