--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,10 +5,10 @@
           <h2>title</h2>
           <p>undertitle</p>
       </div>
-      <a href="home/#project"><div class="scroll-down"></div></a>
+      <a href="home/#links"><div class="scroll-down"></div></a>
   </section>
 
-<section class="project" id="project">
+<section class="project" id="links">
     <div class="conetnt">
         <h2 class="titleText">Links</h2>
     </div>
