added category select

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,5 @@
 <section class="main" id="main">
-  <div class="mainText" id="top">
+  <div class="mainText">
       <h2 class="titleText" style="font-size: 2.5em;">Current Mains</h2>
   </div>
   <div class="mainList">
@@ -16,4 +16,4 @@
           </div>
       </div>
     </div>
-    <a href="main#top"><div class="scroll-up" style="z-index: 100; opacity: 50%;"></div></a>
+    <a href="main#"><div class="scroll-up" style="z-index: 100; opacity: 50%;"></div></a>
