--- a/src/app/all/all.component.html
+++ b/src/app/all/all.component.html
@@ -1,110 +1,131 @@
 <section class="main" id="all">
-  <div class="mainText" id="top">
-      <h1 class="titleText" style="font-size: 2.5em;">All Gear</h1>
+  <div name="categorySelect">
+    <input type="button" class="btn btn-primary" name="categorySelect" id="AllBtn" value="All Gear" (click)="showAll()">
+    <input type="button" class="btn btn-primary" name="categorySelect" id="MiceBtn" value="Mice" (click)="showMice()">
+    <input type="button" class="btn btn-primary" name="categorySelect" id="MousepadBtn" value="Mousepads" (click)="showMousepads()">
+    <input type="button" class="btn btn-primary" name="categorySelect" id="KeyboardBtn" value="Keyboards" (click)="showKeyboards()">
+    <input type="button" class="btn btn-primary" name="categorySelect" id="AudioBtn" value="Audio" (click)="showAudio()">
+    <input type="button" class="btn btn-primary" name="categorySelect" id="MonitorBtn" value="Monitors" (click)="showMonitors()">
+    <input type="button" class="btn btn-primary" name="categorySelect" id="EDCBtn" value="EDC" (click)="showEDC()">
+    <input type="button" class="btn btn-primary" name="categorySelect" id="OtherBtn" value="Other" (click)="showOther()">
   </div>
-  <h2 class="titleText">Mice</h2>
-  <div class="mainList">
-    <div *ngFor="let all of alls">
-      <div *ngIf="all.type=='Mouse'">
-        <div class="box">
-            <div class="imgBx">
-                <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
-                <div class="content" style="position: absolute; bottom: 0;">
-                  <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
+  <div id="categoryMice" name="categoryMice" *ngIf="categoryMice">
+    <h2 class="titleText">Mice</h2>
+    <div class="mainList">
+      <div *ngFor="let all of alls">
+        <div *ngIf="all.type=='Mouse'">
+          <div class="box">
+              <div class="imgBx">
+                  <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
+                  <div class="content" style="position: absolute; bottom: 0;">
+                    <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
+                </div>
               </div>
-            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <h2 class="titleText">Mousepads</h2>
-  <div class="mainList">
-    <div *ngFor="let all of alls">
-      <div *ngIf="all.type=='Mousepad'">
-        <div class="box">
-            <div class="imgBx">
-                <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
-                <div class="content" style="position: absolute; bottom: 0;">
-                  <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
+  <div id="categoryMousepads" name="categoryMousepads" *ngIf="categoryMousepads">
+    <h2 class="titleText">Mousepads</h2>
+    <div class="mainList">
+      <div *ngFor="let all of alls">
+        <div *ngIf="all.type=='Mousepad'">
+          <div class="box">
+              <div class="imgBx">
+                  <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
+                  <div class="content" style="position: absolute; bottom: 0;">
+                    <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
+                </div>
               </div>
-            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <h2 class="titleText">Keyboards</h2>
-  <div class="mainList">
-    <div *ngFor="let all of alls">
-      <div *ngIf="all.type=='Keyboard'">
-        <div class="box">
-            <div class="imgBx">
-                <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
-                <div class="content" style="position: absolute; bottom: 0;">
-                  <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
+  <div *ngIf="categoryKeyboards">
+    <h2 class="titleText">Keyboards</h2>
+    <div class="mainList">
+      <div *ngFor="let all of alls">
+        <div *ngIf="all.type=='Keyboard'">
+          <div class="box">
+              <div class="imgBx">
+                  <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
+                  <div class="content" style="position: absolute; bottom: 0;">
+                    <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
+                </div>
               </div>
-            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <h2 class="titleText">Audio</h2>
-  <div class="mainList">
-    <div *ngFor="let all of alls">
-      <div *ngIf="all.type=='Audio'">
-        <div class="box">
-            <div class="imgBx">
-                <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
-                <div class="content" style="position: absolute; bottom: 0;">
-                  <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
+  <div *ngIf="categoryAudio">
+    <h2 class="titleText">Audio</h2>
+    <div class="mainList">
+      <div *ngFor="let all of alls">
+        <div *ngIf="all.type=='Audio'">
+          <div class="box">
+              <div class="imgBx">
+                  <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
+                  <div class="content" style="position: absolute; bottom: 0;">
+                    <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
+                </div>
               </div>
-            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <h2 class="titleText">Monitors</h2>
-  <div class="mainList">
-    <div *ngFor="let all of alls">
-      <div *ngIf="all.type=='Monitor'">
-        <div class="box">
-            <div class="imgBx">
-                <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
-                <div class="content" style="position: absolute; bottom: 0;">
-                  <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
+  <div *ngIf="categoryMonitors">
+    <h2 class="titleText">Monitors</h2>
+    <div class="mainList">
+      <div *ngFor="let all of alls">
+        <div *ngIf="all.type=='Monitor'">
+          <div class="box">
+              <div class="imgBx">
+                  <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
+                  <div class="content" style="position: absolute; bottom: 0;">
+                    <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
+                </div>
               </div>
-            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <h2 class="titleText">EDC</h2>
-  <div class="mainList">
-    <div *ngFor="let all of alls">
-      <div *ngIf="all.type=='EDC'">
-        <div class="box">
-            <div class="imgBx">
-                <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
-                <div class="content" style="position: absolute; bottom: 0;">
-                  <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
+  <div *ngIf="categoryEDC">
+    <h2 class="titleText">EDC</h2>
+    <div class="mainList">
+      <div *ngFor="let all of alls">
+        <div *ngIf="all.type=='EDC'">
+          <div class="box">
+              <div class="imgBx">
+                  <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
+                  <div class="content" style="position: absolute; bottom: 0;">
+                    <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
+                </div>
               </div>
-            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <h2 class="titleText">Other</h2>
-  <div class="mainList">
-    <div *ngFor="let all of alls">
-      <div *ngIf="all.type=='Other'">
-        <div class="box">
-            <div class="imgBx">
-                <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
-                <div class="content" style="position: absolute; bottom: 0;">
-                  <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
+  <div *ngIf="categoryOther">
+    <h2 class="titleText">Other</h2>
+    <div class="mainList">
+      <div *ngFor="let all of alls">
+        <div *ngIf="all.type=='Other'">
+          <div class="box">
+              <div class="imgBx">
+                  <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
+                  <div class="content" style="position: absolute; bottom: 0;">
+                    <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
+                </div>
               </div>
-            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <a href="all#top"><div class="scroll-up" style="z-index: 100; opacity: 50%;"></div></a>
+  <a href="all#"><div class="scroll-up" style="z-index: 100; opacity: 50%;"></div></a>
