--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,15 +1,19 @@
 <section class="main" id="main">
   <div class="mainText">
-      <h2 class="titleText">main</h2>
+      <h2 class="titleText" style="font-size: 2.5em;">Current Mains</h2>
   </div>
   <div class="mainList">
     <div *ngFor="let main of mains">
       <div class="box">
           <div class="imgBx">
               <a routerLink="/details/{{main.id}}" routerLinkActive="active"><img src="{{main.imgSrc}}" class="fitImg"></a>
+              <div class="content" style="position: absolute; top: 0; color:grey">
+                <span>{{main.type}}</span>
+              </div>
               <div class="content" style="position: absolute; bottom: 0;">
                 <h2>{{main.name}}<br><span>{{main.description}}</span></h2>
             </div>
           </div>
       </div>
     </div>
+    <a href="main#"><div class="scroll-up" style="z-index: 100; opacity: 50%;"></div></a>
