--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,6 @@
 
-  <section class="header">
-      <a href="#" class="logo"> <h1>DeR</h1> </a>
-  </section>
+<section class="header">
+  <div style="display:block">
+    <a href="#" class="logo"> <h1>DeR</h1> </a>
+  </div>
+</section>
