--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,8 @@
   <section class="banner">
       <img src="assets/images/test2.png" class="fitBg">
       <div class="content">
-          <h2>title</h2>
-          <p>undertitle</p>
+          <h2>DavidEatsRice</h2>
+          <p>Gear Site</p>
       </div>
       <a href="home/#links"><div class="scroll-down"></div></a>
   </section>
@@ -18,7 +18,7 @@
               <a href="main"><img src="assets/images/test.png" class="fitImg"></a>
           </div>
           <div class="content">
-              <h2>Current Mains<br><span>I am currently using</span></h2>
+              <h2>Current<br><span>Mains</span></h2>
           </div>
       </div>
         <div class="box">
@@ -26,7 +26,7 @@
               <a href="all"><img src="assets/images/test.png" class="fitImg"></a>
           </div>
           <div class="content">
-            <h2>All Gear<br><span>Everything I have used</span></h2>
+            <h2>All<br><span>Gear</span></h2>
           </div>
         </div>
     </div>
