--- a/src/app/all/all.component.html
+++ b/src/app/all/all.component.html
@@ -17,7 +17,7 @@
           <div class="box">
               <div class="imgBx">
                   <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
-                  <div class="content" style="position: absolute; bottom: 0;">
+                  <div class="content">
                     <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
                 </div>
               </div>
@@ -34,7 +34,7 @@
           <div class="box">
               <div class="imgBx">
                   <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
-                  <div class="content" style="position: absolute; bottom: 0;">
+                  <div class="content">
                     <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
                 </div>
               </div>
@@ -51,7 +51,7 @@
           <div class="box">
               <div class="imgBx">
                   <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
-                  <div class="content" style="position: absolute; bottom: 0;">
+                  <div class="content">
                     <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
                 </div>
               </div>
@@ -68,7 +68,7 @@
           <div class="box">
               <div class="imgBx">
                   <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
-                  <div class="content" style="position: absolute; bottom: 0;">
+                  <div class="content">
                     <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
                 </div>
               </div>
@@ -85,7 +85,7 @@
           <div class="box">
               <div class="imgBx">
                   <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
-                  <div class="content" style="position: absolute; bottom: 0;">
+                  <div class="content">
                     <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
                 </div>
               </div>
@@ -102,7 +102,7 @@
           <div class="box">
               <div class="imgBx">
                   <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
-                  <div class="content" style="position: absolute; bottom: 0;">
+                  <div class="content">
                     <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
                 </div>
               </div>
@@ -119,7 +119,7 @@
           <div class="box">
               <div class="imgBx">
                   <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
-                  <div class="content" style="position: absolute; bottom: 0;">
+                  <div class="content">
                     <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
                 </div>
               </div>
