--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 
   <section class="banner">
-      <img src="assets/images/test2.png" class="fitBg">
+      <img src="assets/images/banner.png" class="fitBg">
       <div class="content">
           <h2>DavidEatsRice</h2>
           <p>Gear Site</p>
@@ -15,7 +15,7 @@
     <div class="projectList">
       <div class="box">
           <div class="imgBx">
-              <a href="main"><img src="assets/images/test.png" class="fitImg"></a>
+              <a href="main"><img src="assets/images/main.png" class="fitImg"></a>
           </div>
           <div class="content">
               <h2>Current<br><span>Mains</span></h2>
@@ -23,7 +23,7 @@
       </div>
         <div class="box">
           <div class="imgBx">
-              <a href="all"><img src="assets/images/test.png" class="fitImg"></a>
+              <a href="all"><img src="assets/images/all.png" class="fitImg"></a>
           </div>
           <div class="content">
             <h2>All<br><span>Gear</span></h2>
