--- a/src/app/all/all.component.html
+++ b/src/app/all/all.component.html
@@ -18,7 +18,7 @@
               <div class="imgBx">
                   <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
                   <div class="content">
-                    <h2>{{all.name}}<br><span>{{all.description}}</span></h2>
+                    <a routerLink="/details/{{all.id}}" routerLinkActive="active"><h2>{{all.name}}<br><span>{{all.description}}</span></h2></a>
                 </div>
               </div>
           </div>
@@ -128,4 +128,10 @@
       </div>
     </div>
   </div>
-  <a href="all#"><div class="scroll-up" style="z-index: 100; opacity: 50%;"></div></a>
+  <a href="all#"><div class="scroll-up" style="z-index: 100; opacity: 50%;" title="Back to Top"></div></a>
+  <div style="display: flex; text-transform: uppercase;">
+    <a class="btn-slice" style="left: 1%; bottom: 5%" (click)="goBack()">
+      <div class="top"><span>Back to Home</span></div>
+      <div class="bottom"><span>Back to Home</span></div>
+    </a>
+  </div>
