--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,10 @@
 
-  <section class="banner">
-      <img src="assets/images/banner.png" class="fitBg">
-      <div class="content">
-          <h2>DavidEatsRice</h2>
-          <p>Gear Site</p>
-      </div>
-      <a href="home/#links"><div class="scroll-down"></div></a>
-  </section>
-
+<section class="banner">
+    <div class="content" id="DAVIDEATSRICE">
+      DAVIDEATSRICE
+    </div>
+    <a href="home/#links"><div class="scroll-down"></div></a>
+</section>
 <section class="project" id="links">
     <div class="conetnt">
         <h2 class="titleText">Links</h2>
@@ -18,7 +15,7 @@
               <a href="main"><img src="assets/images/main.png" class="fitImg"></a>
           </div>
           <div class="content">
-              <h2>Current<br><span>Mains</span></h2>
+              <a href="main"><h2>Current<br><span>Mains</span></h2></a>
           </div>
       </div>
         <div class="box">
@@ -26,7 +23,7 @@
               <a href="all"><img src="assets/images/all.png" class="fitImg"></a>
           </div>
           <div class="content">
-            <h2>All<br><span>Gear</span></h2>
+            <a href="all"><h2>All<br><span>Gear</span></h2></a>
           </div>
         </div>
     </div>
