--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,11 @@
 
 <section class="footer">
   <ul class="sci">
-      <li><a href="discord link here"><img src="images/discord.png"></a></li>
-      <li><a href="instagram link here"><img src="images/instagram.png"></a></li>
-      <li><a href="mailto: davidy804@gmail.com"><img src="images/email.png"></a></li>
+      <li><a style="line-height: 62px;" href="discord link here"><img src="assets/images/discord.svg"></a></li>
+      <li><a style="line-height: 69px;" href="mailto: davidy804@gmail.com"><img src="assets/images/mail.svg"></a></li>
+      <li><a style="line-height: 73px;" href="instagram link here"><img src="assets/images/instagram.svg"></a></li>
   </ul>
-  <h4 class="copyrightText">Copyright © 2023 David Yuan. All rights reserved.</h4>
 </section>
+<div style="margin-bottom: 5%">
+  <h4 class="copyrightText">Copyright © 2023 David Yuan. All rights reserved.</h4>
+</div>
