--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 
 <section class="header">
-  <div style="display:block">
+  <div class="logo" style="display:block">
     <a href="#" class="logo"> <h1>DeR</h1> </a>
   </div>
 </section>
